@@ -1,7 +1,0 @@
-duplicity\.backends\.acdclibackend module
-=========================================
-
-.. automodule:: duplicity.backends.acdclibackend
-    :members:
-    :undoc-members:
-    :show-inheritance:
