@@ -1,7 +1,0 @@
-duplicity.backends.copycombackend module
-========================================
-
-.. automodule:: duplicity.backends.copycombackend
-    :members:
-    :undoc-members:
-    :show-inheritance:
