@@ -1,0 +1,10 @@
+testing.manual package
+======================
+
+Module contents
+---------------
+
+.. automodule:: testing.manual
+    :members:
+    :undoc-members:
+    :show-inheritance:
